# Pico_Template

./: CMakeLists.txt
src/: led.c
